tests/errors/unprovable-cons.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint L+1 > G+1
   ┌─ ./primitives/./state.fil:9:5
   │
 9 │     @[G+1, L] out: #WIDTH,
   │     ^^^^^^^^^ interval's end time must be greater than the start time
   │
   ┌─ tests/errors/unprovable-cons.fil:14:3
   │
14 │   l0 := L<G, L+1>(left);
   │   ---------------------- component's where clause constraints must be satisfied
   │
   = assignment violates constraint: G=0, L=0

error: Cannot prove constraint |L - G| >= 1
   ┌─ ./primitives/./state.fil:7:5
   │
 3 │   comp Register[#WIDTH]<G: L-(G+1), L: 1>(
   │                         ---------- interface allows event to trigger every |L - G+1| cycle(s)
   ·
 7 │     @[G, G+1] in: #WIDTH,
   │     ^^^^^^^^^^^^^^^^^^^^ signal lasts for 1 cycle(s)
   │
   ┌─ tests/errors/unprovable-cons.fil:14:3
   │
14 │   l0 := L<G, L+1>(left);
   │   ---------------------- component's where clause constraints must be satisfied
   │
   = assignment violates constraint: G=0, L=0

error: Cannot prove constraint |L - G| >= 1
  ┌─ tests/errors/unprovable-cons.fil:8:3
  │
5 │ comp Main<G: L-(G), L: 1>(
  │           -------- interface allows event to trigger every |L - G| cycle(s)
  ·
8 │   @[G, G+1] left: 32,
  │   ^^^^^^^^^^^^^^^^^^ signal lasts for 1 cycle(s)
  │
  = assignment violates constraint: G=0, L=0

error: Cannot prove constraint L+1 > G+1
   ┌─ tests/errors/unprovable-cons.fil:14:3
   │
14 │   l0 := L<G, L+1>(left);
   │   ^^^^^^^^^^^^^^^^^^^^^^ component's where clause constraints must be satisfied
   │
   = assignment violates constraint: G=0, L=0

error: Multiple errors encountered
   ┌─ tests/errors/unprovable-cons.fil:15:9
   │
15 │   out = l0.out;
   │   ---   ^^^^^^ source is available for @[G+1, L+1]
   │   │      
   │   destination's requirement @[L+2, L+3]
   │
   = assignment violates constraint: G=2, L=0
   = Cannot prove constraint L+2 >= G+1
   = Cannot prove constraint L+1 >= L+3

Compilation failed with 5 errors.
